--- a/group/default.css
+++ b/group/default.css
@@ -1,6 +1,6 @@
 img{
-    width:50%;
-    height: auto;
+    width:937px;
+    height: 701px;
     display: block;
     margin-left: auto;
     margin-right: auto;
