--- a/group/default.css
+++ b/group/default.css
@@ -5,3 +5,49 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+    flex-direction: column;
+}
+
+.text-header{
+    color: #3c009d;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.underline{
+    width: 100px;
+    height: 10px;
+    background-color: aqua;
+    border-radius: 9px;
+}
+
+.list-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.person-container{
+    width: 300px;
+}
+
+.person-container img{
+    width: 100%;
+    height: auto;
+}
+
+.short-describe{
+    margin: 10px 0;
+}
+
