--- a/group/members/stylePerson.css
+++ b/group/members/stylePerson.css
@@ -1,30 +1,55 @@
-.profile{
+.inner-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.profile {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 
-img{
+img {
     width: 400px;
     height: 400px;
     margin-right: 20px;
     object-fit: cover;
 }
 
-a{
-    color:white;
+a {
+    color: white;
     background-color: #2563EB;
     box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.5);
     border-radius: 0.5rem;
     font-weight: 500;
-    font-size:  0.875rem;
+    font-size: 0.875rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    text-decoration: none;
 }
 
-a:hover{
+.profile .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+a:hover {
     background-color: #1D4ED8;
+}
+
+.profile .inner-desc {
+    height: 390px;
+    width: 390px;
+    border: 5px solid springgreen;
+
+}
+
+.profile .inner-desc ul {
+    margin-bottom: 50px;
 }
