--- a/group/default.css
+++ b/group/default.css
@@ -43,8 +43,9 @@ img {
 }
 
 .person-container img{
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 .short-describe{
